--- a/login.css
+++ b/login.css
@@ -2,7 +2,7 @@
      box-sizing: border-box;
 }
 body{
-    background-color: blue;
+    background-color: lightblue;
      font-family: sans-serif;
      display: flex;
      justify-content: center;
